--- a/bootstrap-portfolio-template-main/index.html
+++ b/bootstrap-portfolio-template-main/index.html
@@ -54,8 +54,10 @@
           <div class="container d-flex align-items-center py-5">
               <div class="col text-center bg-light m-4 p-4 text-dark bg-opacity-50 rounded-5 border border-2 border-white">
                 <img src="image/success.png" class="img-fluid col-lg-2 col-sm-6 col-xs-6 mb-4"> 
-                <p class="display-2 text-secondary mb-3">Personal Portfolio</p>
-                <p class="text-secondary fs-5 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tellus lectus, dapibus a erat quis, venenatis feugiat nulla. Phasellus sit amet ante sapien.</p>
+                <p class="display-2 text-secondary mb-3">Khristine's Portfolio</p>
+                <p class="text-secondary fs-5 mb-6">Hello! I am a Programmer Analyst who thrives in new challenges and finding a creative touch. 
+                  Programming has helped me lean on the skills that don't make a job feel like work. I've always enjoyed a forever changing environment 
+                  with a background in the Royal Canadian Navy, Telecommunications sales..etc. My goals in my work life is to expand my knowledge and mold into an even better developer. <BR> Thank you for visiting my portfolio!</p>
                 <a class="btn btn-success btn-lg active rounded-pill mb-3" href="#about">About</a>
                 <a class="btn btn-light btn-lg rounded-pill mb-3" href="#contact">Contact</a>
             </div>
@@ -74,26 +76,20 @@
                 <div class="col-lg-7 offset-lg-1">
                     <p class="lh-lg mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, molestiae commodi? Cum ullam voluptatum fuga modi? Quos possimus corrupti quisquam? Ratione, hic repellat distinctio iste at cumque ad harum architecto odio rem excepturi itaque minima praesentium quibusdam dolorum perferendis voluptas!</p>
                     <h3 class="fw-bold fs-4">Skills</h3>
-                    
+
+                    <p class="mb-0" >MySQL/Orcale:</p>
+                    <p class="mb-0" >Java/Apache/JDBC</p>
+                    <p class="mb-0" >JavaScript/React/JQuery/JSON/AJAX:</p>
+                    <p class="mb-0" >C#:</p>
                     <p class="mb-0" >HTML:</p>
-                    <div class="progress mb-3">
-                        <div class="progress-bar progress-bar-striped bg-greenyellow" style="width: 99%;">99%</div>
-                    </div>
                     <p class="mb-0" >CSS:</p>
-                    <div class="progress mb-3">
-                        <div class="progress-bar progress-bar-striped bg-info" style="width: 99%;">99%</div>
-                    </div>
-                    <p class="mb-0" >JS:</p>
-                    <div class="progress mb-3">
-                        <div class="progress-bar progress-bar-striped bg-warning" style="width: 99%;">99%</div>
-                    </div>
-                    <p class="mb-0" >BOOTSTRAP 5:</p>
-                    <div class="progress mb-3">
-                        <div class="progress-bar progress-bar-striped bg-danger" style="width: 99%;">99%</div>
-                    </div>
-                    <p class="mb-0" >REACT:</p>
-                    <div class="progress mb-3">
-                        <div class="progress-bar progress-bar-striped bg-green" style="width: 99%;">99%</div>
+                    <p class="mb-0" >Database programming:</p>
+                    <p class="mb-0" >Python:</p>
+                    <p class="mb-0" >Bootstrap:</p>
+                    <p class="mb-0" >PHP:</p>
+                    <p class="mb-0" >Data Retrieval and Visualization/ Tableau</p>
+                    <p class="mb-0" >Networking:</p>
+
                     </div>
                 </div>
 
@@ -104,7 +100,7 @@
         <section data-bs-spy="scroll" data-bs-target="#scrolling_navbar" class="bg-dark py-5" id="travel">
             <div class="container">
                 <div class="text-white text-center py-5">
-                    <h2 class="fw-bolder">Travel</h2>
+                    <h2 class="fw-bolder">Projects</h2>
                     <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, necessitatibus.</p>
                 </div>
 
