Update on photo area
Update on photos

--- a/bootstrap-portfolio-template-main/index.html
+++ b/bootstrap-portfolio-template-main/index.html
@@ -106,19 +106,19 @@
 
                 <div class="row pb-4" id="gallery" data-toggle="modal" data-target="#exampleModal">
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                      <img class="w-100 img-thumbnail" src="image/photo-1.jpg" data-target="#carouselExample" data-slide-to="0">
+                      <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 195151.png" data-target="#carouselExample" data-slide-to="0">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                      <img class="w-100 img-thumbnail" src="image/photo-2.jpg" data-target="#carouselExample" data-slide-to="1">
+                      <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194836.png" data-target="#carouselExample" data-slide-to="1">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                      <img class="w-100 img-thumbnail" src="image/photo-3.jpg" data-target="#carouselExample" data-slide-to="2">
+                      <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194644.png" data-target="#carouselExample" data-slide-to="2">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                      <img class="w-100 img-thumbnail" src="image/photo-4.jpg" data-target="#carouselExample" data-slide-to="3">
+                      <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194709.png" data-target="#carouselExample" data-slide-to="3">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                        <img class="w-100 img-thumbnail" src="image/photo-5.jpg" data-target="#carouselExample" data-slide-to="4">
+                        <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194758.png" data-target="#carouselExample" data-slide-to="4">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                         <img class="w-100 img-thumbnail" src="image/photo-6.jpg" data-target="#carouselExample" data-slide-to="5">
@@ -156,19 +156,19 @@
                               </div>
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/photo-1.jpg">
+                                <img class="d-block w-100" src="image/Screenshot 2024-11-19 195151.png">
                               </div>
                               <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/photo-2.jpg">
+                                <img class="d-block w-100" src="image/Screenshot 2024-11-19 194836.png">
                               </div>
                               <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/photo-3.jpg">
+                                <img class="d-block w-100" src="image/Screenshot 2024-11-19 194644.png">
                               </div>
                               <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/photo-4.jpg">
+                                <img class="d-block w-100" src="image/Screenshot 2024-11-19 194709.png">
                               </div>
                               <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/photo-5.jpg">
+                                <img class="d-block w-100" src="image/Screenshot 2024-11-19 194758.png">
                               </div>
                               <div class="carousel-item" data-bs-interval="3000">
                                 <img class="d-block w-100" src="image/photo-6.jpg">
