--- a/bootstrap-portfolio-template-main/index.html
+++ b/bootstrap-portfolio-template-main/index.html
@@ -38,9 +38,6 @@
                 <a class="nav-link" href="#travel">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#blog">Blog</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
@@ -57,7 +54,7 @@
                 <p class="display-2 text-secondary mb-3">Khristine's Portfolio</p>
                 <p class="text-secondary fs-5 mb-6">Hello! I am a Programmer Analyst who thrives in new challenges and finding a creative touch. 
                   Programming has helped me lean on the skills that don't make a job feel like work. I've always enjoyed a forever changing environment 
-                  with a background in the Royal Canadian Navy, Telecommunications sales..etc. My goals in my work life is to expand my knowledge and mold into an even better developer. <BR> Thank you for visiting my portfolio!</p>
+                  with a background of 5 years in the Royal Canadian Navy, and 6 years in Telecommunications sales. My goals in my work life is to expand my knowledge and mold into an even better developer. <BR> Thank you for visiting my portfolio!</p>
                 <a class="btn btn-success btn-lg active rounded-pill mb-3" href="#about">About</a>
                 <a class="btn btn-light btn-lg rounded-pill mb-3" href="#contact">Contact</a>
             </div>
@@ -66,29 +63,26 @@
 
         <section data-bs-spy="scroll" data-bs-target="#scrolling_navbar" class="container py-5" id="about">
             <div class="text-center py-5">
-                <h2 class="fw-bolder">About</h2>
-                <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h2 class="fw-bolder">Skills</h2>
+
             </div>
             <div class="row">
                 <div class="col-lg-4" >
                     <img class="img-fluid rounded-5" src="image/19199262.png">
                 </div>
                 <div class="col-lg-7 offset-lg-1">
-                    <p class="lh-lg mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, molestiae commodi? Cum ullam voluptatum fuga modi? Quos possimus corrupti quisquam? Ratione, hic repellat distinctio iste at cumque ad harum architecto odio rem excepturi itaque minima praesentium quibusdam dolorum perferendis voluptas!</p>
-                    <h3 class="fw-bold fs-4">Skills</h3>
-
-                    <p class="mb-0" >MySQL/Orcale:</p>
-                    <p class="mb-0" >Java/Apache/JDBC</p>
-                    <p class="mb-0" >JavaScript/React/JQuery/JSON/AJAX:</p>
-                    <p class="mb-0" >C#:</p>
-                    <p class="mb-0" >HTML:</p>
-                    <p class="mb-0" >CSS:</p>
-                    <p class="mb-0" >Database programming:</p>
-                    <p class="mb-0" >Python:</p>
-                    <p class="mb-0" >Bootstrap:</p>
-                    <p class="mb-0" >PHP:</p>
-                    <p class="mb-0" >Data Retrieval and Visualization/ Tableau</p>
-                    <p class="mb-0" >Networking:</p>
+                    <li class="mb-0" >MySQL/Orcale</li>
+                    <li class="mb-0" >Java/Apache/JDBC</li>
+                    <li class="mb-0" >JavaScript/React/JQuery/JSON/AJAX</li>
+                    <li class="mb-0" >C#</li>
+                    <li class="mb-0" >HTML</li>
+                    <li class="mb-0" >CSS</li>
+                    <li class="mb-0" >Database programming</li>
+                    <li class="mb-0" >Python</li>
+                    <li class="mb-0" >Bootstrap</li>
+                    <li class="mb-0" >PHP</li>
+                    <li class="mb-0" >Data Retrieval and Visualization/ Tableau</li>
+                    <li class="mb-0" >Networking</li>
 
                     </div>
                 </div>
@@ -101,33 +95,33 @@
             <div class="container">
                 <div class="text-white text-center py-5">
                     <h2 class="fw-bolder">Projects</h2>
-                    <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, necessitatibus.</p>
+                    <p class="fs-5">Examples of projects I worked on while studying at NBCC and my summer internship as a first year student. A blend of HTML/CSS, Java, C# and Javascript projects. <b><i>Click through the carousel below to expand the photos.</b></i> </p>
                 </div>
 
                 <div class="row pb-4" id="gallery" data-toggle="modal" data-target="#exampleModal">
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                       <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 195151.png" data-target="#carouselExample" data-slide-to="0">
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                      <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194836.png" data-target="#carouselExample" data-slide-to="1">
+                    <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
+                      <img class="w-100 img-thumbnail" src="image/kirby.png" data-target="#carouselExample" data-slide-to="1">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                      <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194644.png" data-target="#carouselExample" data-slide-to="2">
+                      <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194836.png" data-target="#carouselExample" data-slide-to="2">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                      <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194709.png" data-target="#carouselExample" data-slide-to="3">
+                      <img class="w-100 img-thumbnail" src="image/java.png" data-target="#carouselExample" data-slide-to="3">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                        <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194758.png" data-target="#carouselExample" data-slide-to="4">
+                        <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194946.png" data-target="#carouselExample" data-slide-to="4">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                        <img class="w-100 img-thumbnail" src="image/photo-6.jpg" data-target="#carouselExample" data-slide-to="5">
+                        <img class="w-100 img-thumbnail" src="image/javascript.png" data-target="#carouselExample" data-slide-to="5">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                        <img class="w-100 img-thumbnail" src="image/photo-7.jpg" data-target="#carouselExample" data-slide-to="6">
+                        <img class="w-100 img-thumbnail" src="image/formexpand.png" data-target="#carouselExample" data-slide-to="6">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                        <img class="w-100 img-thumbnail" src="image/photo-8.jpg" data-target="#carouselExample" data-slide-to="7">
+                        <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194709.png" data-target="#carouselExample" data-slide-to="7">
                     </div>
                   </div>
                   
@@ -159,25 +153,25 @@
                                 <img class="d-block w-100" src="image/Screenshot 2024-11-19 195151.png">
                               </div>
                               <div class="carousel-item" data-bs-interval="3000">
+                                <img class="d-block w-100" src="image/kirby.png">
+                              </div>
+                              <div class="carousel-item" data-bs-interval="3000">
                                 <img class="d-block w-100" src="image/Screenshot 2024-11-19 194836.png">
                               </div>
                               <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/Screenshot 2024-11-19 194644.png">
+                                <img class="d-block w-100" src="image/java.png">
+                              </div>
+                              <div class="carousel-item" data-bs-interval="3000">
+                                <img class="d-block w-100" src="image/Screenshot 2024-11-19 194946.png">
+                              </div>
+                              <div class="carousel-item" data-bs-interval="3000">
+                                <img class="d-block w-100" src="image/javascript.png">
+                              </div>
+                              <div class="carousel-item" data-bs-interval="3000">
+                                <img class="d-block w-100" src="image/formexpand.png">
                               </div>
                               <div class="carousel-item" data-bs-interval="3000">
                                 <img class="d-block w-100" src="image/Screenshot 2024-11-19 194709.png">
-                              </div>
-                              <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/Screenshot 2024-11-19 194758.png">
-                              </div>
-                              <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/photo-6.jpg">
-                              </div>
-                              <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/photo-7.jpg">
-                              </div>
-                              <div class="carousel-item" data-bs-interval="3000">
-                                <img class="d-block w-100" src="image/photo-8.jpg">
                               </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExample" type="button" data-slide="prev">
@@ -201,37 +195,11 @@
         <section data-bs-spy="scroll" data-bs-target="#scrolling_navbar" class="py-5" id="blog">
             <div class="container">
                 <div class="text-center py-5">
-                    <h2 class="fw-bolder">Blog</h2>
+                    <h2 class="fw-bolder">Resume </h2>
                     <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, necessitatibus.</p>
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card">
-                            <img src="image/water-is-better.jpg" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title text-center py-2">The Norwegian Fjords</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora nam quidem quia, dignissimos modi possimus asperiores nihil blanditiis sunt voluptates quae facere placeat corporis? Ipsa, consequuntur reprehenderit? Repellendus, aliquam. Deleniti.</p>
-                                <a href="blog-page.html" class="btn btn-light d-flex justify-content-center">Click to read this article...</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card">
-                            <img src="image/mountain-light.jpg" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title text-center py-2">The Northern Lights</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora nam quidem quia, dignissimos modi possimus asperiores nihil blanditiis sunt voluptates quae facere placeat corporis? Ipsa, consequuntur reprehenderit? Repellendus, aliquam. Deleniti.</p>
-                                <a href="#" class="btn btn-light d-flex justify-content-center">Click to read this article...</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card">
                             <img src="image/guatemala.jpg" class="card-img-top">
@@ -256,31 +224,17 @@
             <div class="container">
                 <div class="text-white text-center py-5">
                     <h2 class="fw-bolder">Contact</h2>
-                    <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, necessitatibus.</p>
+                    <p class="fs-5">Any inquires can be sent directly to me.</p>
                 </div>
 
                 <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-9 col-sm-10 col-11 mx-auto">
-                    <form action="" class="text-white fs-6">
-                        <div class="mb-3">
-                            <label class="form-label text-white">Name Surname</label>
-                            <input type="text" class="form-control">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label text-white">Email</label>
-                            <input type="email" class="form-control">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label text-white">Subject</label>
-                            <input type="text" class="form-control">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label text-white">Message</label>
-                            <textarea type="text" rows="10" class="form-control"></textarea>
-                        </div>
-                        <div class="d-grid gap-2 col-lg-4 col-md-4 mx-auto">
-                            <button class="btn btn-success btn-lg rounded-pill">Send</button>
-                        </div>
-                    </form>
+                  <form action="mailto:khrissymcgrath@hotmail.co.uk" method="post" enctype="text/plain" class="text-white fs-6">
+                      <div class="d-grid gap-2 col-lg-4 col-md-4 mx-auto">
+                          <button type="submit" class="btn btn-success btn-lg rounded-pill">Email</button>
+                      </div>
+                  </form>
+              </div>
+              
                 </div>
             </div>
         </section>
