--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="container">
                 <div class="text-center py-5">
                     <h2 class="fw-bolder">Resume </h2>
-                    <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, necessitatibus.</p>
+                    <p class="fs-5">I invite you to view my resume to discover how my unique skills and experiences can contribute to your team's success!</p>
                 </div>
                 
                    <img src="image/stockphoto.jpg" class="card-img-top" height="500" width="200"> <BR>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="text-white text-center py-5">
                     <h2 class="fw-bolder">Contact</h2>
-                    <p class="fs-5">Any inquires can be sent directly to me.</p>
+                    <p class="fs-5">Any inquires can be sent directly to me, thank you for visiting.</p>
                 </div>
 
                 <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-9 col-sm-10 col-11 mx-auto">
