--- a/index.html
+++ b/index.html
@@ -104,28 +104,35 @@
                 <div class="row pb-4" id="gallery" data-toggle="modal" data-target="#exampleModal">
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                       <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 195151.png" data-target="#carouselExample" data-slide-to="0">
+                      <p>Header section of the Care Page for Shining Horizons internship.</p>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
                       <img class="w-100 img-thumbnail" src="image/kirby.png" data-target="#carouselExample" data-slide-to="1">
+                      <p>Web Design course final project based on video game Kirby, done in CSS, HTML.</p>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                       <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194836.png" data-target="#carouselExample" data-slide-to="2">
+                      <p>Header section of the Facility Page for Shining Horizons internship.</p>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                       <img class="w-100 img-thumbnail" src="image/java.png" data-target="#carouselExample" data-slide-to="3">
+                      <p>Java final project creating a hotel reservations database that would autofill 3 days from current date, using different forms in FXML.</p>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                         <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194946.png" data-target="#carouselExample" data-slide-to="4">
+                        <p>Rotating carousel for Shining Horizons internship.</p>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                         <img class="w-100 img-thumbnail" src="image/javascript.png" data-target="#carouselExample" data-slide-to="5">
+                        <p>JavaScript build for a reservation database.</p>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                         <img class="w-100 img-thumbnail" src="image/formexpand.png" data-target="#carouselExample" data-slide-to="6">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                         <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194709.png" data-target="#carouselExample" data-slide-to="7">
-                    </div>
+                        <p>Section from the therapeutic services page for Shining Horizons internship.</p>
+                      </div>
                   </div>
                   
                   <!-- Modal -->
