--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                         <img class="w-100 img-thumbnail" src="image/formexpand.png" data-target="#carouselExample" data-slide-to="6">
-                    </div>
+                        <p>According style form to display text, buttons, color theory for Shining Horizons internship.</p>
+                      </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                         <img class="w-100 img-thumbnail" src="image/Screenshot 2024-11-19 194709.png" data-target="#carouselExample" data-slide-to="7">
                         <p>Section from the therapeutic services page for Shining Horizons internship.</p>
