Updated index.html, updated resume

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
                 
                    <img src="image/stockphoto.jpg" class="card-img-top" height="500" width="200"> <BR>
-                   <BR><a href ="Resume/Resume_New_Preformatted.docx"><h4>Khristine McGrath's Resume</h4></a>
+                   <BR><a href ="Resume/Resume_Khristine.docx"><h4>Khristine McGrath's Resume</h4></a>
                   </section>
                             
         </section>
